--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+colorama==0.4.4
 idna==3.3
 lxml==4.8.0
 markdownify==0.11.1
