--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,emacs,jetbrains+all,linux,python,vim,virtualenv,windows
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
+*.db
+title_abstract_contents.json
